--- a/frontend/static/css/countries.css
+++ b/frontend/static/css/countries.css
@@ -37,13 +37,12 @@ nav button:hover {
   grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
-.cards {
+.cards-info {
   box-shadow: 0 7px 29px 0 rgba(100, 100, 111, 0.2);
   border-radius: 6px;
   background-color: rgb(255, 255, 255);
   width: 250px;
 }
-
 .cards-info a hover {
   transform: scale(1.5);
 }
