--- a/frontend/static/css/countries.scss
+++ b/frontend/static/css/countries.scss
@@ -52,15 +52,12 @@ nav {
   border-radius: 6px;
   background-color: rgb(255, 255, 255);
   width: 250px;
+    &:hover {
+      transform: scale(1.1);
+      transition: .5s;
+    }
 }
 
-.cards-info {
-    a {
-      hover {
-        transform: scale(1.5);
-      }
-    }  
-}
 
 .cards-flag img {
   border-radius: 6px;
@@ -69,4 +66,21 @@ nav {
 .cards-text {
   padding: 1rem;
   font-size: 1rem;
+}
+
+@media only screen and (max-width: 375px) {
+  #container {
+    display: block;
+    margin: 0 auto;
+    // padding-left: 3rem;
+    // column-gap: 10px;
+    // row-gap: 30px;
+    // grid-template-columns: 1fr 1fr 1fr 1fr;
+    .search {
+      margin-bottom: 3rem;
+    }
+    .cards {
+      margin-top: 3rem;
+    }
+  }
 }
