Fix positions of search bar and search function

--- a/frontend/static/css/countries.scss
+++ b/frontend/static/css/countries.scss
@@ -39,6 +39,12 @@ nav {
 
 //Countries page
 //Research bar
+.search {
+  display: flex;
+  justify-content: space-between;
+  padding: 2rem;
+}
+
 #container {
   padding-left: 3rem;
   display: grid;
