--- a/frontend/static/css/home.scss
+++ b/frontend/static/css/home.scss
@@ -39,9 +39,8 @@ nav {
 // Main area
 #app {
   width: 100%;
-  padding-top: 13rem;
-  display: flex;
-  align-items: center;
+  padding-top: 10rem;
+  // align-items: center;
   box-sizing: border-box;
   #home-container {
     display: flex;
