--- a/frontend/static/css/countries.css
+++ b/frontend/static/css/countries.css
@@ -28,6 +28,12 @@ nav button:hover {
   transition: 0.5s;
 }
 
+.search {
+  display: flex;
+  justify-content: space-between;
+  padding: 2rem;
+}
+
 #container {
   padding-left: 3rem;
   display: grid;
@@ -45,9 +51,7 @@ nav button:hover {
   width: 250px;
   height: 280px;
 }
-
-
-.cards:hover {
+.cards-info:hover {
   transform: scale(1.1);
   transition: 0.5s;
 }
