Remove unused codes

--- a/frontend/static/css/countries.css
+++ b/frontend/static/css/countries.css
@@ -72,7 +72,7 @@ nav button:hover {
   #container .search {
     margin-bottom: 3rem;
   }
-  #container .cards {
+  #container .cards-info {
     margin-top: 3rem;
   }
 }/*# sourceMappingURL=countries.css.map */
