Fix mobile design

--- a/frontend/static/css/countries.css
+++ b/frontend/static/css/countries.css
@@ -66,6 +66,16 @@ nav button:hover {
 }
 
 @media only screen and (max-width: 375px) {
+  .search {
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+  }
+  .search #region {
+    margin-top: 1rem;
+    width: 50%;
+  }
+
   #container {
     display: block;
   }
