--- a/frontend/static/css/countryView.css
+++ b/frontend/static/css/countryView.css
@@ -4,9 +4,47 @@
   flex-direction: column;
   row-gap: 2rem;
 }
+.country-page button {
+  border: none;
+  border-radius: 20px;
+  padding: 1rem;
+  color: hsl(0deg, 0%, 100%);
+  background-color: hsl(209deg, 23%, 22%);
+}
+.country-page button:hover {
+  cursor: pointer;
+  opacity: 0.8;
+  transform: scale(0.9);
+  transition: 0.5s;
+}
 
 .country-info {
   display: flex;
   gap: 5rem;
-  font-size: 2rem;
+  width: 100%;
+}
+.country-info .country-flag {
+  width: 50%;
+}
+.country-info .country-flag img {
+  width: 100%;
+}
+.country-info .country-data {
+  width: 50%;
+  font-size: 1.5rem;
+}
+
+@media only screen and (max-width: 375px) {
+  .country-info {
+    display: block;
+    row-gap: 2rem;
+  }
+  .country-info .country-flag {
+    width: 100%;
+    margin-bottom: 1rem;
+  }
+  .country-info .country-data {
+    font-size: 1rem;
+    width: 100%;
+  }
 }/*# sourceMappingURL=countryView.css.map */
